<resources>
    <string name="app_name">Best Blends</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_recipe_page">RecipePageActivity</string>
    <string name="intro_text">List of Recipes</string>
    <string name="faves_intro_text">List of Favorite Recipes</string>
    <string name="action_settings">Settings</string>
    <string name="et_recipe">Smoothie Name</string>
    <string name="et_description">Smoothie Description</string>
    <string name="et_ingredients">Smoothie Ingredients - separate ingredients with commas (Ex. 1 cup Mangoes, 2 cups spinach...)</string>
    <string name="et_recipe_steps">Steps to make the smoothie!</string>
    <string name="favorite">Favorite Recipe</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="measurement">Measurements</string>
    <string-array name="measurement_arrays">
        <item>tsp</item>
        <item>tsps</item>
        <item>tbs</item>
        <item>tbs</item>
        <item>cup</item>
        <item>cups</item>
    </string-array>

    <string name="number">Amt</string>
    <string-array name="measurement_numeric_arrays">
        <item>0</item>
        <item>&#188;</item>
        <item>&#8531;</item>
        <item>&#189;</item>
        <item>&#8532;</item>
        <item>&#190;</item>
        <item>1</item>
        <item>1 &#188;</item>
        <item>1 &#8531;</item>
        <item>1 &#189;</item>
        <item>1 &#8532;</item>
        <item>1 &#190;</item>
        <item>2</item>
        <item>2 &#188;</item>
    </string-array>

    <string name="ingredient">Ingredient Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_single_fragment2">SingleFragment2Activity</string>
</resources>

