<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_margin="@dimen/padding">
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal">

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="0dp"
				android:layout_weight="1"
				android:orientation="vertical">
				<ImageView
					android:id="@+id/iv_thumbnail"
					android:layout_height="80dp"
					android:layout_width="match_parent" />
				<ImageButton
					android:id="@+id/ib_thumbnail_button"
					android:layout_height="55dp"
					android:layout_width="match_parent"
					android:src="@drawable/camera"
					android:adjustViewBounds="true"
					android:scaleType="fitCenter"
					android:background="@color/colorPrimaryLight"/>

			</LinearLayout>

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="0dp"
				android:layout_weight="3"
				android:orientation="vertical">
				<EditText
					android:id="@+id/et_recipe_smoothieName"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/et_recipe" />

				<EditText
					android:id="@+id/et_recipe_description"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textMultiLine"
					android:hint="@string/et_description" />

			</LinearLayout>
		</LinearLayout>
		<EditText
			android:id="@+id/et_recipe_ingredients"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textMultiLine"
			android:hint="@string/et_ingredients"/>
		<EditText
			android:id="@+id/et_recipe_steps"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textMultiLine"
			android:hint="@string/et_recipe_steps"/>
		<!--<LinearLayout-->
			<!--android:layout_height="wrap_content"-->
			<!--android:layout_width="match_parent"-->
			<!--android:orientation="horizontal">-->

			<!--<Spinner-->
				<!--android:id="@+id/spinner1"-->
				<!--android:layout_width="0dp"-->
				<!--android:layout_weight="1"-->
				<!--android:layout_height="wrap_content"-->
				<!--android:entries="@array/measurement_numeric_arrays"-->
				<!--android:prompt="@string/number" />-->

			<!--<Spinner-->
				<!--android:id="@+id/spinner2"-->
				<!--android:layout_width="0dp"-->
				<!--android:layout_weight="1"-->
				<!--android:layout_height="wrap_content"-->
				<!--android:entries="@array/measurement_arrays"-->
				<!--android:prompt="@string/measurement" />-->

			<!--<EditText-->
				<!--android:id="@+id/et_single_ingredient"-->
				<!--android:layout_width="match_parent"-->
				<!--android:layout_height="wrap_content"-->
				<!--android:inputType="textMultiLine"-->
				<!--android:hint="@string/ingredient"/>-->
		<!--</LinearLayout>-->

		<LinearLayout
			android:id="@+id/LinearLayoutDecisions"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"/>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<Button
				android:id="@+id/button_cancel"
				android:layout_width="0dp"
				android:layout_weight=".5"
				android:layout_height="wrap_content"
				android:background="@color/colorAccent"
				android:ems="10"
				android:text="@string/cancel"
				android:textAllCaps="false"
				android:textColor="@color/white"
				android:layout_marginRight="10dp"/>
			<Button
				android:id="@+id/button_submit"
				android:layout_width="0dp"
				android:layout_weight=".5"
				android:layout_height="wrap_content"
				android:background="@color/colorPrimaryDark"
				android:ems="10"
				android:text="@string/submit"
				android:textAllCaps="false"
				android:textColor="@color/white"
				android:layout_marginLeft="10dp"
				/>
		</LinearLayout>
		<Button
			android:id="@+id/button_discard"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/black"
			android:textColor="@color/white"
			android:layout_marginTop="10dp"
			android:text="@string/discard"
			android:textAllCaps="false"
			android:elevation="50dp"/>

	</LinearLayout>
	<android.support.design.widget.FloatingActionButton
		android:id="@+id/fab_item_fave"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|end"
		android:layout_margin="@dimen/fab_margin"
		android:src="@drawable/heart_outline" />
</android.support.design.widget.CoordinatorLayout>
